2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: updated documentation. improved fitting by normalizing time.
	* laser_relaxtime.m: added.  takes a laser tracking file and a magnet log file along with other necessary parameters, applies fitting routine, generates plots, and outputs a table describing the relaxation times present.
	* laser_membranestep.m: added.  takes a laser tracking file and a magnet log file along with other necessary parameters, applies fitting routine, generates plots, and outputs a table describing the viscoelastic model parameters found in the data.
	* membrane_step_response.m: added.  returns parameter values for fit to membrane model (Sackmann '98).
	* membrane_step_response_fun.m: added.  file describing the modeling function(s) used for fitting procedure in membrane_step_response.m.

2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: added.  computes the percent recovery of vector.

2005-06-29  Jeremy Cribb <jcribb@email.unc.edu>
	* evaluateKK.m: fixed bug where variable for tolerance (eta) was inadvertantly placed inside an if-statement.
	* kkr.m: reworked for use with current version of evaluateKK.m.
	* visc_ps: reinserted figure.  added karo line to standard plot as a 'guide for the eye'
	* get_video_viscs.m: reworked to take advantage of current version of load_video_tracking.  Now multiple files are handled by load_video_tracking, each tracker is handled at exactly its own time points (no substituted zeros to fill in matrix), and a mean power spectrum across all beads computed.  Used linear interpolation to put all power spectra on the same grid.
	* get_vrpn_viscs.m: reworked for use with current version of load_vrpn_tracking.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: fixed a bug where, when asked for only one time constant, nothing would happen.
	* relaxtime_fun.m: same.

2005-06-09  Jeremy Cribb <jcribb@email.unc.edu>